# wow-addon-manager

./: .gitignore  CHANGELOG.md  README.md
wow-addon-manager/: Cargo.toml
wow-addon-manager/src/: cmdargs.yaml  main.rs
wow-addon-manager/src/error/: error.rs
wow-addon-manager/src/file/: compression.rs  config.rs  detection.rs  mod.rs
wow-addon-manager/src/net/: curseforge.rs  download.rs  github.rs  mod.rs  tukui.rs
