[package]
name    = "wow-addon-manager"
version = "0.1.0"
authors = ["Kumodatsu <dragonkumo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json  = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_yaml  = "0.8"
reqwest     = { version = "0.10.10", features = ["json"] }
tokio       = { version  = "0.2", features = [ "rt-threaded", "macros"] }
select      = "0.6.0-alpha.1"
error-chain = "0.12.4"
chrono      = "0.4.19"
